# llvm-static-analysis

./: .gitignore  CMakeLists.txt  README.md  sample.ll
list-function/: CMakeLists.txt  ListFunction.cpp
static-call-counter/: CMakeLists.txt  StaticCallCounter.cpp
